# MazarbuLib

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  library.json
.github/agents/: mazarbulib-reviewer.agent.md
.github/workflows/: ci.yml
cmake/: MazarbuLibConfig.cmake.in
docs/: architecture-context.puml  architecture-modules.puml  architecture-runtime-flow.puml
examples/: arduino.cpp  posix.c  stm32_hal.c
include/: mazarbulib.h  mazarbulib_config.h
src/: mazarbulib.c
tests/: test_mazarbulib.c
